--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@solana/web3.js": "^1.95.3",
     "axios": "^1.7.7",
     "buffer": "^6.0.3",
+    "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.441.0",
     "okto-sdk-react": "^0.1.2",
     "react": "^18.3.1",
