--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0",
+    "recoil": "^0.7.7",
     "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
