--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "@solana/web3.js": "^1.95.3",
+    "@solflare-wallet/sdk": "^1.4.2",
     "axios": "^1.7.7",
     "buffer": "^6.0.3",
     "dotenv": "^16.4.5",
@@ -20,6 +21,7 @@
     "okto-sdk-react": "^0.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0",
     "recoil": "^0.7.7",
