--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.12.1",
     "@solana/web3.js": "^1.95.3",
     "@solflare-wallet/sdk": "^1.4.2",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.7",
     "buffer": "^6.0.3",
     "dotenv": "^16.4.5",
