--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.7",
     "buffer": "^6.0.3",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.12.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.441.0",
     "okto-sdk-react": "^0.1.2",
@@ -26,6 +28,7 @@
     "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0",
     "recoil": "^0.7.7",
+    "tailwind-merge": "^2.5.5",
     "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
